[package]
name = "dht_urls_extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.4"
rusqlite = "0.26.3"
tinyjson = "2.3.0"

[profile.dev]
opt-level = 2
lto = "thin"
[profile.release]
opt-level = 3
lto = true
