[package]
name = "dht_urls_extractor"
version = "1.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "=3.2.8", features = ["derive"]}
regex = "1.5.4"
rusqlite = { version = "0.26.3", features = ["bundled"] }
tinyjson = "2.3.0"

[profile.release]
opt-level = 3
lto = true
